--- a/index.html
+++ b/index.html
@@ -55,6 +55,34 @@
         </div>
 
     </div>
+    <div class="container2">
+        <div class="inner2">
+            <img src="https://www.allrecipes.com/thmb/4M-bXv0wcuoalXTa_-SusYDDma0=/800x533/filters:no_upscale():max_bytes(150000):strip_icc()/7509380-air-fryer-chicken-tenders-MID-M7004348-071-4x3-044762e6ecb84af890599cfebe6a913b.jpg" alt="" class="image3">
+
+            <div>
+                <p>main dishes</p>
+                <h1>7 Air Fryer Dinners for Every Night of the Week</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, tenetur totam soluta illum dolores provident dolorem? Minus dolor architecto delectus corrupti praesentium at impedit voluptatem! Illo, est! Cupiditate, suscipit atque.</p>
+            </div>
+        </div>
+
+        <div class="inner3">
+            <h1>Food News</h1>
+
+            <div class="inner3a">
+                <img class="imglist" src= "https://www.allrecipes.com/thmb/4qkMZhKvkqfFXjBMvLs4GtaQv9k=/144x95/filters:no_upscale():max_bytes(150000):strip_icc()/108455easy-texas-chiliFranceC4x3-24002f7b582d4930a5e3aeb3e3d6bb3f.jpg" alt="">
+                <p>My Dad Has Won 3 Chili Cook-Offs—Here Are His Secrets to the Best Texas Chili</p>
+            </div>
+            <div class="inner3a">
+                <img class="imglist" src= "https://www.allrecipes.com/thmb/97_W0n5Hzwl0mRLsq4LgBszD84E=/144x95/filters:no_upscale():max_bytes(150000):strip_icc()/8690218-AppleSpiceRolls-Allrecipes-Magazine-GOLDMAN_ALR_FallBZ_WakeUp_R317338_36163-4x3-de9f69e8d3374f50bfe5c69e5d2be4b5.jpg" alt="">
+                <p>My Dad Has Won 3 Chili Cook-Offs—Here Are His Secrets to the Best Texas Chili</p>
+            </div>
+            <div class="inner3a">
+                <img class="imglist" src= "https://www.allrecipes.com/thmb/Rmnv8KdqXRL6ztQsWtr3C6rReSQ=/144x95/filters:no_upscale():max_bytes(150000):strip_icc()/ar-dunkin-fall-adobe-4x3-abc42304ad384d77ab5f9638c3c84180.jpg" alt="">
+                <p>My Dad Has Won 3 Chili Cook-Offs—Here Are His Secrets to the Best Texas Chili</p>
+            </div>
+        </div>
+    </div>
 
     
 </body>
